--- a/App/app/src/main/res/layout/layout_message.xml
+++ b/App/app/src/main/res/layout/layout_message.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,8 +10,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/light_main_color"
-        android:layout_height="wrap_content">
+        android:layout_alignParentBottom="true">
 
         <RelativeLayout
             android:orientation="horizontal"
@@ -37,4 +38,4 @@
 
         </RelativeLayout>
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
