--- a/App/app/src/main/res/layout/layout_news.xml
+++ b/App/app/src/main/res/layout/layout_news.xml
@@ -2,12 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lv_show_news" />
+    android:layout_height="match_parent"
+    android:background="@color/background_main">
 
     <LinearLayout
         android:orientation="vertical"
@@ -38,8 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/light_main_color"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/lv_show_news">
+        android:layout_alignParentBottom="true">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -74,5 +69,10 @@
                 android:id="@+id/btn_news_page_last" />
         </LinearLayout>
     </RelativeLayout>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lv_show_news" />
 
 </RelativeLayout>
