--- a/App/app/src/main/res/values/styles.xml
+++ b/App/app/src/main/res/values/styles.xml
@@ -16,6 +16,6 @@
         <!--   darker variant for the status bar and contextual app bars -->
         <item name="colorPrimaryDark">@color/light_main_color</item>
         <!--   theme UI controls like checkboxes and text fields -->
-        <item name="colorAccent">#FF4081</item>
+        <item name="colorAccent">@color/background_main</item>
     </style>
 </resources>
